# Scraper-AI

./: .env.example  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
prompts/: cars_full.txt  cars_full_bkp.txt  cars_test.txt  ollama_models.txt
src/scraper_ai/: __init__.py  __main__.py  cache.py  cleaner.py  cli.py  config.py  crawler.py  fetcher.py  models.py
src/scraper_ai/providers/: __init__.py  anthropic.py  base.py  gemini.py  groq.py  ollama.py  openai.py
src/scrapper_ai/: __init__.py  __main__.py  cli.py  config.py  crawler.py  fetcher.py
src/scrapper_ai/providers/: __init__.py  anthropic.py  base.py  gemini.py  groq.py  ollama.py  openai.py
tests/: conftest.py  test_cache.py  test_cleaner.py  test_cli.py  test_config.py  test_crawler.py  test_fetcher.py  test_models.py  test_providers.py
